# plutus

./: .hlint.yaml  cabal.project  default.nix  deploy-docs.sh  lib.nix  release.nix  stack.yaml
.github/workflows/: benchmark.yml  hlint.yml  test.yml
language-plutus-core/test/Quotation/: Spec.hs  contract.plc.golden  eitherE.plc.golden  eitherI.plc.golden  maybeI.plc.golden
marlowe/test/Spec/: Actus.hs
nix/overlays/: required.nix
pkgs/: default.nix
pkgs/.cache/nix/: binary-cache-v5.sqlite
plutus-contract/: plutus-contract.cabal
plutus-contract-exe/: README.md  plutus-contract-exe.cabal
plutus-contract-exe/examples/guessing-game/: Main.hs
plutus-contract-exe/test/Spec/: State.hs
plutus-contract-test/: README.md  plutus-contract-test.cabal  shell.nix
plutus-contract/doc/: contract-api.adoc
plutus-contract/test/Spec/: Contract.hs  HUnit.hs  State.hs
plutus-playground-client/src/: MainFrame.purs  Types.purs
plutus-playground-client/test/: AjaxUtilsTests.purs  MainFrameTests.purs
plutus-playground-lib/src/Playground/: API.hs  Contract.hs
plutus-playground-server/app/: PSGenerator.hs
plutus-playground-server/src/Playground/: Interpreter.hs
plutus-playground-server/test/Playground/: UsecasesSpec.hs
plutus-playground-server/usecases/: CrowdFunding.hs  Crowdfunding.hs  Game.hs  Starter.hs  Vesting.hs
plutus-playground/plutus-playground-client/src/: Chain.purs
plutus-playground/plutus-playground-client/test/: evaluation_response2.json
plutus-playground/plutus-playground-lib/tests/: Spec.hs
plutus-playground/plutus-playground-server/app/: PSGenerator.hs
plutus-playground/plutus-playground-server/usecases/: CrowdFunding.hs  Game.hs  Vesting.hs
plutus-scb/: plutus-scb.cabal
plutus-scb/test/: Spec.hs
plutus-tutorial/doc/: 02-validator-scripts.adoc  03-wallet-api.adoc
plutus-tutorial/doctest/Tutorial/: 02-validator-scripts.md
plutus-tutorial/tutorial/Tutorial/: 02-wallet-api.md  Solutions0.hs  Vesting.hs
plutus-tx/: plutus-tx.cabal
plutus-tx/doctest/: doctests.hs
plutus-tx/src/PlutusTx/: Ratio.hs
plutus-tx/tutorial/: tutorial-doctests.hs
plutus-use-cases/: plutus-use-cases.cabal
plutus-use-cases/bench/: Bench.hs
plutus-use-cases/src/: Contract.hs  Plutus.hs
plutus-use-cases/src/Contracts/: CrowdFunding.hs
plutus-use-cases/test/: Spec.hs
plutus-use-cases/test/Spec/: Crowdfunding.hs  Future.hs  Game.hs  MultiSig.hs  Swap.hs  Vesting.hs  crowdfundingTestOutput.txt  future.pir  game.pir  gameStateMachine.pir  renderCrowdfunding.txt  renderGuess.txt  renderVesting.txt
plutus-wallet-api/: plutus-wallet-api.cabal
plutus-wallet-api/test/: Spec.hs
wallet-api/: wallet-api.cabal
wallet-api/src/Ledger/: Types.hs  (+1 more)
wallet-api/test/: Generators.hs  Spec.hs
wallet-api/tutorial/: Tutorial.md  tutorial-doctests.hs
(+108 files in other folders)
