cabal-version: 2.2
name: plutus-contract-test
version: 0.1.0.0
license: Apache-2.0
license-files: 
  LICENSE
  NOTICE
maintainer: jann.mueller@iohk.io
author: Jann Müller
homepage: https://github.com/iohk/plutus#readme
bug-reports: https://github.com/iohk/plutus/issues
description:
    Please see the README on GitHub at <https://github.com/input-output-hk/plutus#readme>
build-type: Simple

source-repository head
    type: git
    location: https://github.com/iohk/plutus

common lang
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable
    other-extensions: DeriveAnyClass FlexibleContexts FlexibleInstances
                      MultiParamTypeClasses TypeFamilies OverloadedStrings
                      MonadComprehensions ConstrainedClassMethods TupleSections GADTs
                      RankNTypes TemplateHaskell QuasiQuotes TypeApplications
                      ExistentialQuantification
    ghc-options: -Wall -Wnoncanonical-monad-instances
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities

flag development
    description:
        Enable `-Werror`
    default: False
    manual: True

library
    import: lang
    exposed-modules:
        Language.Plutus.Contract.Test
    hs-source-dirs: src
    build-depends:
        plutus-emulator -any,
        plutus-contract -any,
        plutus-wallet-api -any
    build-depends:
        aeson -any,
        base >=4.7 && <5,
        containers -any,
        lens -any,
        text -any,
        bytestring -any,
        mtl -any,
        semigroupoids -any,
        profunctors -any,
        transformers -any,
        warp -any,
        extensible-effects -any,
        transformers-base -any,
        monad-control -any,
        mmorph -any,
        tasty -any,
        tasty-hunit -any

test-suite plutus-contract-test-test
    import: lang
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    other-modules:
        Spec.Contract
        Spec.State
    build-depends:
        base >=4.9 && <5,
        containers -any,
        hedgehog -any,
        tasty -any,
        tasty-hunit -any,
        text -any,
        mtl -any,
        aeson -any,
        lens -any,
        transformers -any,
        extensible-effects -any,
        plutus-emulator -any,
        plutus-contract -any,
        plutus-contract-test -any,
        plutus-wallet-api -any,
        plutus-tx -any
